package fr.unice.polytech.arduinoml.kernel.structural;

/**
 * Assignable interface.
 */
public interface Assignable extends NamedElement {
}
