package fr.unice.polytech.arduinoml.kernel.structural;

/**
 * Numerical signal.
 */
public enum SIGNAL {
	HIGH,
	LOW
}
