@startuml
skinparam linetype polyline

' Inheritance
Component <|-- BusComponent
BusComponent <|-- LCD
Assignable <|-- LCD
Assignable <|-- Actuator
Component <|-- SimpleComponent
SimpleComponent <|-- Sensor
SimpleComponent <|-- Actuator
Component <|-- RemoteComponent
RemoteComponent <|-- Keyboard
class "ActionAssignmentFromNumeric<SIGNAL>" as ActionAssignmentFromNumeric_SIGNAL
class "ActionAssignmentFromRemote<Remote>" as ActionAssignmentFromRemote_Remote

Action <|-- ActionAssignmentFromNumeric_SIGNAL
Action <|-- ActionAssignmentFromRemote_Remote
Action <|-- ActionDisplay

' NamedElement <|-- Component
' NamedElement <|-- Remote
' NamedElement <|-- State
' NamedElement <|-- App
' Abstract Class Declaration
Interface NamedElement{
  name : String
}
abstract class Action<T> {
   value : T
}
abstract class Component {
}
abstract class BusComponent {
  bus : Integer
}
abstract class SimpleComponent {
  pin : Integer
}
interface Assignable {
}
abstract class RemoteComponent {
}
class ActionDisplay<T> {
}
' Class Declaration
class App {
}
class Transition {
    signal : SIGNAL
}
' Enum Declaration
enum SIGNAL {
   HIGH
   LOW
}

' All attributes

App "1" *--> "*" Component : components
App "1" *--> "*" State : states
State "*" --> "*" Transition : transitions
Transition "*" --> "1" Sensor : sensor
Transition "*" --> "1" State : next
State "*" --> "*" Action : actions
Action "*" --> "1" Assignable : assignable

' Hide methods
hide RemoteComponent methods
hide BusComponent methods
hide SimpleComponent methods
hide Component methods
hide Keyboard methods
hide BusComponent methods
hide SimpleComponent methods
hide Action methods
hide SIGNAL methods
hide Transition methods
hide Action methods
hide NamedElement methods
hide SIGNAL methods
' Hide members
hide Keyboard members
hide LCD members
hide Keyboard members
hide RemoteComponent members
hide ActionDisplay members
hide Sensor members
hide App members
hide Actuator members
hide Sensor members
hide ActionAssignmentFromNumeric_SIGNAL members
hide ActionAssignmentFromRemote_Remote members
hide State members
hide Component members
hide Assignable members
hide App members
hide Assignable members
@enduml